# GPTCode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  gptcode.py  install.sh  install_gptcode.sh  pyproject.toml
.github/workflows/: lint.yml  release.yml
docs/: RELEASE_TEMPLATE.md
tests/: test_cli_flags.py
