[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcode"
dynamic = ["version"]
description = "Chat-first DevOps/Coding-Assistent für das Terminal"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "GPTCode Maintainerteam"}]
keywords = ["cli", "devops", "assistant", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.30.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/CoYoDuDe/GPTCode"
Repository = "https://github.com/CoYoDuDe/GPTCode"

[project.scripts]
gptcode = "gptcode:main"

[tool.setuptools]
include-package-data = true
py-modules = ["gptcode"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
